--- a/homepageV1.html
+++ b/homepageV1.html
@@ -11,6 +11,10 @@
             padding: 1rem;
             background-color: #e5d033;
             border:2px solid#fff
+            
+        }
+        [class ="Dining-Hall-Image"]{
+            width: 120px;
         }
     </style>
 
@@ -19,6 +23,34 @@
     <div class="container-md border">
         <div class="row">
             <div class="col">Gopher Grub</div>
+        </div>
+    </div>
+    <div class="container-fluid border">
+        <div class="row">
+            <div class="col">Dining Halls</div>
+        </div>
+        <div class="row">
+            <img src="..." alt="..." class="Dining-Hall-Image">
+            <div class="col">
+                Pioneer
+            </div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
