dining hall list

--- a/homepageV1.html
+++ b/homepageV1.html
@@ -22,36 +22,97 @@
 <body>
     <div class="container-md border">
         <div class="row">
-            <div class="col">Gopher Grub</div>
+            <div class="col">
+                <div class="text-center fw-bold">
+                    Gopher Grub
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-fluid border">
         <div class="row">
-            <div class="col">Dining Halls</div>
+            <div class="col">
+                <div class="text-center fw-bold">
+                    Dining Halls
+                </div>
+            </div>
+            <div class="col">
+                <div class="text-center fw-bold">
+                    Dine On Campus
+                </div>
+            </div>
         </div>
+
+        <!-- 1st dining hall-->
         <div class="row">
             <img src="..." alt="..." class="Dining-Hall-Image">
             <div class="col">
-                Pioneer
+                <div class="text-center">
+                    Pioneer
+                </div>
             </div>
-            <div class="col"></div>
+            <div class="col">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+            </div>
         </div>
+
+        <!-- 2nd dining hall-->
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
+            <img src="..." alt="..." class="Dining-Hall-Image">
+            <div class="col">
+                <div class="text-center">
+                    17th
+                </div>
+            </div>
+            <div class="col">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+            </div>
         </div>
+        
+        <!-- 3rd dining hall-->
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
+            <img src="..." alt="..." class="Dining-Hall-Image">
+            <div class="col">
+                <div class="text-center">
+                    Middlebrook
+                </div>
+            </div>
+            <div class="col">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+            </div>
+        </div> 
+
+        <!-- 4th dining hall-->
         <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
+            <img src="..." alt="..." class="Dining-Hall-Image">
+            <div class="col">
+                <div class="text-center">
+                    Sanford
+                </div>
+            </div>
+            <div class="col">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+                <img src="..." alt="..." class="Dining-Hall-Image">
+            </div>
         </div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
+        
+        <!-- 6th dining hall-->
+
+        <!-- 7th dining hall-->
+
+        <!-- 8th dining hall-->
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
