--- a/homepageV1.html
+++ b/homepageV1.html
@@ -16,15 +16,25 @@
         [class ="Dining-Hall-Image"]{
             width: 120px;
         }
+        [class ="text-heading"]{
+            color: yellow;
+
+        }
+        [class ="header1"]{
+            margin-top: 3rem;
+            margin-bottom: 2rem;
+        }
     </style>
 
 </head>
 <body>
-    <div class="container-md border">
-        <div class="row">
-            <div class="col">
-                <div class="text-center fw-bold">
-                    Gopher Grub
+    <div class="container-md">
+        <div class="header1">
+            <div class="row">
+                <div class="col">
+                    <div class="text-center fw-bold">
+                        Gopher Grub
+                    </div>
                 </div>
             </div>
         </div>
@@ -33,7 +43,7 @@
         
         <!--Dining Halls-->
         <div class="container">
-            <div class="row">
+            <div class="row header1">
                 <div class="col">
                     <div class="text-center fw-bold">
                         Dining Halls
@@ -114,7 +124,7 @@
         
         <!--Dine on Campus Restaurants-->
         <div class="container">
-            <div class="row">
+            <div class="row header1">
                 <div class="col">
                     Dine on Campus Restaurants
                 </div>
