--- a/homepageV1.html
+++ b/homepageV1.html
@@ -18,6 +18,7 @@
         }
         [class ="text-heading"]{
             color: yellow;
+            
 
         }
         [class ="header1"]{
@@ -126,7 +127,9 @@
         <div class="container">
             <div class="row header1">
                 <div class="col">
-                    Dine on Campus Restaurants
+                    <div class="text-center fw-bold">
+                        Dine on Campus Restaurants
+                    </div>
                 </div>
             </div>
         </div>
