--- a/homepageV1.html
+++ b/homepageV1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gopher Grub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <style>
@@ -18,8 +18,6 @@
         }
         [class ="text-heading"]{
             color: yellow;
-            
-
         }
         [class ="header1"]{
             margin-top: 3rem;
@@ -131,6 +129,13 @@
                         Dine on Campus Restaurants
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                Contact
             </div>
         </div>
     </div>
